# vue_apidocument_app

./: .eslintrc.js  package.json
components/: apiDoc.vue
frontend/: README.md  nuxt.config.js  package-lock.json  package.json
frontend/.nuxt/: App.js  index.js  router.js
frontend/components/: .apiDoc.vue.swp  apiDoc.vue  navbar.vue
frontend/pages/: index.vue
frontend/store/: .index.js.swp  index.js
pages/: index.vue
server/: pyproject.toml
server/apidocs/: .models.py.swp  apidocs.py  controller.py  models.py  views.py
server/apidocs/kettle/: application.py
server/tests/: test_apidocs.py
