[tool.poetry]
name = "apidocs"
version = "0.1.0"
description = ""
authors = ["HAYASAKA.Ryosuke <hayasaka.ryosuke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
peewee = "^3.8"
gunicorn = "^19.9"
beaker = "^1.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
apidocs = "apidocs.apidocs:run"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

